fixed H1 styling on mobile in articles

--- a/src/components/Articles/Articles.css
+++ b/src/components/Articles/Articles.css
@@ -12,6 +12,10 @@
 .article h1 {
   font-size: 2rem;
   margin-top: 2rem;
+
+  @media (max-width: 700px) {
+    font-size: 1.5rem;
+  }
 }
 
 .article-image img {
